# ottie

./: .easignore  .gitignore  CLAUDE.md  DESIGN.md  README.md  README.zh-CN.md  STATUS.md  package-lock.json  package.json
.claude/: launch.json  settings.json
.claude/commands/: dev-module.md  review-module.md
apps/desktop/: .env.example  CLAUDE.md  index.html  package.json  tsconfig.json
apps/desktop/config/: openclaw.json
apps/desktop/config/device/: SOUL.md
apps/desktop/config/personal/: SOUL.md
apps/desktop/scripts/: start-with-screenpipe.sh
apps/desktop/src/: App.tsx  MainLayout.tsx  SettingsView.tsx  SetupGuide.tsx  cache.ts  global.css  services.ts  store.ts  themes.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: CommandPalette.tsx  ContextMeter.tsx  FileTree.tsx  FileViewer.tsx  GitPanel.tsx  SchedulePanel.tsx  TabBar.tsx  TerminalView.tsx
apps/mobile/: .easignore  CLAUDE.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  contacts.tsx  devices.tsx  index.tsx  settings.tsx
apps/mobile/src/: context-providers.ts  live-activity.ts  notifications.ts  services.ts  store.ts  streaming.ts  tts.ts  voice.ts
docs/: architecture.md  claude-code-guide.md  development-plan.md  mobile-plan.md
references/a2a/: README.md
references/a2ui/: README.md
references/matrix-js-sdk/: README.md
references/tuwunel/: README.md
(+6 files in other folders)
