[package]
name = "ottie-desktop"
version = "0.1.0"
description = "Ottie — Agent-Native IM"
authors = ["Ottie Team"]
edition = "2021"

[lib]
name = "ottie_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
